--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vue-slick": "^1.1.16",
-    "vuetify": "^2.6.2"
+    "vuetify": "^2.6.2",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@mdi/font": "^6.5.95",
